fixed css style to wrap long word within commentbox and for description to take right left spacing

--- a/src/components/CardModal/ActivityComponent.module.css
+++ b/src/components/CardModal/ActivityComponent.module.css
@@ -42,6 +42,7 @@
   border-radius: 50%;
   background-color: green;
   color: white;
+  flex: "none";
   height: 30px;
   width: 30px;
 }
@@ -49,6 +50,7 @@
 .previousActivityMainContentWrapper {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   flex: 1;
 }
 
@@ -83,28 +85,20 @@
   padding: 0rem 0.2rem;
 }
 
-.activityItemCommentBoxWrapper {
-  margin-left: 0.5rem;
-  background-color: white;
-  border-radius: 3px;
-  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.068);
-}
-.activityItemCommentBoxWrapper:hover {
-  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.185);
-}
-
-.commentBoxTextarea {
-  width: 100%;
+.commentBox {
   border: none;
   background-color: white;
+  margin-left: 0.5rem;
   padding: 0.4rem 0.5rem;
   border-radius: 3px;
   font-family: inherit;
   font-size: 0.75rem;
   color: rgb(68, 68, 68);
-  overflow-y: hidden;
-  overflow-wrap: break-word;
+  word-wrap: break-word;
+  overflow: hidden;
+  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.068);
 }
-.commentBoxTextarea:focus {
-  outline: none;
+
+.commentBox:hover {
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.185);
 }
